# self-hosted-tools

./: .gitignore
.github/workflows/: cloudflare-ddns.yml
cloudflare-ddns/: .gitignore  Cargo.toml  Dockerfile  example.compose.yml
cloudflare-ddns/src/: main.rs
custom-reverse-proxy/: Cargo.toml
custom-reverse-proxy/src/: main.rs
src/: main.rs
