[package]
name = "cloudflare-ddns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
envy = "0.4.2"
log = { version = "0.4.22", features = ["kv"] }
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
structured-logger = "1.0.3"
